<resources>
    <string name="app_name">Enigma</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="button_text">Touch me now!</string>
    <string name="noRequest">No requests</string>
    <string name="content_dscrp">Error :(</string>
    <string name="home">Home</string>
    <string name="user">Name Surname</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="exit">Exit</string>
    <string name="open_nav">Open menu</string>
    <string name="close_nav">Close menu</string>
    <string name="support_info">Contact Information</string>
    <string name="phone_info">Support phone number</string>
    <string name="phone_number">0–800–506–231</string>
    <string name="email_info">E-mail support service</string>
    <string name="email_address">enigma@gmail.com</string>
    <string name="work_hours_info">Working hours</string>
    <string name="work_hours">Mon-Sun: from 8:00 to 22:00</string>
    <string name="dark_theme">Dark theme</string>
    <string name="notification">Notification</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="enter_old_password">Enter the old password</string>
    <string name="new_password">New password</string>
    <string name="enter_new_password">Enter a new password</string>
    <string name="confirm_password">Confirm new password</string>
    <string name="confirm">Confirm</string>
    <string name="requirements">Requirements</string>
    <string name="book_info">&quot;History of Ukraine-Rus&quot;\nMykhailo Hrushevskyi</string>
    <string name="book_genre">Documentary history</string>
    <string name="book_year">1997</string>
    <string name="exchange">Choose your book</string>
</resources>