<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings"/>

        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/support"
            android:title="@string/support"/>
    </group>

    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/exit"
                android:title="@string/exit"/>
        </menu>
    </item>
</menu>