<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    style="@style/Background"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/textView_ChangePassword"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/change_password"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView_ChangePassword"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_OldPassword"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/old_password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_OldPassword"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/enter_old_password"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_NewPassword"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/new_password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_NewPassword"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/enter_new_password"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_ConfirmPassword"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/confirm_password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_ConfirmPassword"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="confirmPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_Alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            style="@style/Button_System"
            android:text="@string/requirements" />

        <Button
            android:id="@+id/button_Confirm"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/button"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textSize="24sp" />
    </LinearLayout>

</RelativeLayout>