<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".SupportFragment">

    <TextView
        android:id="@+id/textViewContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="71dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="70dp"
        style="@style/Text"
        android:text="@string/support_info"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewContact"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="89dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="47dp"
            android:drawablePadding="8dp"
            android:gravity="center"
            style="@style/Text"
            android:text="@string/phone_info"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/phone" />

        <TextView
            android:id="@+id/textViewPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="104dp"
            android:autoLink="phone"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:height="40dp"
            android:drawablePadding="8dp"
            android:gravity="center"
            style="@style/Text"
            android:text="@string/email_info"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/email" />

        <TextView
            android:id="@+id/textViewEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="104dp"
            android:text="@string/email_address"
            android:autoLink="email"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textViewHoursInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="47dp"
            android:layout_marginTop="30dp"
            android:drawablePadding="8dp"
            android:gravity="center"
            style="@style/Text"
            android:text="@string/work_hours_info"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/clock" />

        <TextView
            android:id="@+id/textViewHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="104dp"
            style="@style/Text"
            android:text="@string/work_hours"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>